@@ -1,3 +1,9 @@
+2006-07-06  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procman.c: (procman_get_tree_state):
+
+	If a column is visible, ensure it really is.
+
 2006-06-29  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
